--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ serde = { version = "1.0", features = ["derive"] }
 bimap = "*"
 crossbeam-channel = "0.5.0"
 enum_dispatch = "0.3.8"
+ggez-egui = "0.2.1"
+egui = "0.19.0"
