--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = "0.8.0-rc0"
+ggez = "0.7.0"
 cgmath = { version = "0.18", features = [ "serde" ] }
 bincode = "1.3.3"
 
